sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value get
  	for(i<- get NombreValeurs()-2 to 0 by -1){
                ^AlgCocktailSort1:13: error: value - is not a member of Unit
  	for(i<- get NombreValeurs()-2 to 0 by -1){
                                   ^